Foreman application info localization fix

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -1758,8 +1758,8 @@
 "help.R.tasksDesc" "sv" "Under denna flik ser du möten, syner och inspektioner från byggandes tid som tillståndet förutsätter samt andra tillståndsbestämmelser."
 "help.R.verdictDesc" "fi" "Täällä näet viranomaisen tekemät hakemukseesi liittyvät päätökset. Saat sähköpostiviestin, kun viranomainen lisää päätöksen."
 "help.R.verdictDesc" "sv" "Här ser du myndighetens beslut om din ansökan. Du får ett e-postmeddelande när myndigheten lägger till beslutet."
-"help.tyonjohtajan-nimeaminen-v2.subtype" "fi" "Ilmoitus on voimassa heti hakemuksen jättämisen jälkeen. Hakemuksen käsittelee viranomainen. Voit käyttää ilmoitusta, kun olet aiemmin toiminut samassa roolissa hankkeen kunnan alueella vastaavissa tai vaativimmissa työnjohtotehtävissä. Muussa tapauksessa valitse 'Hakemus'."
-"help.tyonjohtajan-nimeaminen-v2.subtype" "sv" "Anmälan är i kraft så snart ansökan är inlämnad. Ansökan behandlas av myndigheten. Du kan använda denna anmälan om du i samma roll tidigare har verkat inom projektkommunens område i motsvarande eller mer krävande arbetsledningsuppgifter. I annat fall väljer du 'Ansökan'."
+"help.tyonjohtajan-nimeaminen-v2.subtype" "fi" "Ilmoitus on voimassa heti hakemuksen jättämisen jälkeen. Hakemuksen käsittelee viranomainen. Voit käyttää ilmoitusta, kun olet toiminut enintään viittä vuotta aikaisemmin samassa roolissa hankkeen kunnan alueella vastaavissa tai vaativimmissa työnjohtotehtävissä. Muussa tapauksessa valitse 'Hakemus'."
+"help.tyonjohtajan-nimeaminen-v2.subtype" "sv" "Anmälan är i kraft så snart ansökan är inlämnad. Ansökan behandlas av myndigheten. Du kan använda denna anmälan om du har verkat i samma roll högst fem år tidigare inom projektkommunens område i motsvarande eller mer krävande arbetsledningsuppgifter. I annat fall väljer du 'Ansökan'."
 "help.undefined.applicationInfoDesc" "fi" ""
 "help.undefined.applicationInfoDesc" "sv" ""
 "help.undefined.attachmentsDesc" "fi" ""
