--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -3172,8 +3172,8 @@
 "setpw.success" "sv" "Lösenord har ställts in. Du kan nu logga in."
 "setpw.title" "fi" "Salasanan vaihtaminen"
 "setpw.title" "sv" "Ändra lösenord"
-"signAttachment.description" "fi" "Voit allekirjoittaa suunnitelmat Lupapisteessä sähköisesti.<br /><b>Rakennussuunnittelija allekirjoittaa pääpiirustukset.<br />Erityisalan suunnittelijat allekirjoittavat erityissuunnitelmat.</b>"
-"signAttachment.description" "sv" "Du kan underteckna planerna elektroniskt i Lupapiste.<br /><b>Byggnadsplanerare undertecknar huvudritningarna.<br />Planerare för specialområden undertecknar specialplanerna.</b>"
+"signAttachment.description" "fi" "Voit allekirjoittaa asiakirjat ja suunnitelmat Lupapisteessä sähköisesti.<br /><br /><b>Rakentamiseen liittyvissä suunnitelmissa:</b><br />- Rakennussuunnittelija allekirjoittaa pääpiirustukset.<br />- Erityisalan suunnittelijat allekirjoittavat erityissuunnitelmat.<br />"
+"signAttachment.description" "sv" "Du kan underteckna planerna och dokument elektroniskt i Lupapiste.<br /><br /><b>Vid planerna som anknyter till byggandet:</b><br />- Byggnadsplanerare undertecknar huvudritningarna.<br />-Planerare för specialområden undertecknar specialplanerna.<br />"
 "signAttachment.ok" "fi" "Valitut liitteet allekirjoitettu onnistuneesti"
 "signAttachment.ok" "sv" "Underteckningen av valda bilagor lyckades."
 "signAttachment.select" "fi" "Allekirjoita"
