--- a/resources/i18n/calendar.txt
+++ b/resources/i18n/calendar.txt
@@ -8,3 +8,11 @@
 "auth-admin.organization-calendars" "sv" "Kalenderhantering"
 "auth-admin.organization-calendars.calendars.title" "fi" "Organisaation viranomaisten kalenterit"
 "auth-admin.organization-calendars.calendars.title" "sv" "Myndigheternas kalendrar inom organisationen"
+"auth-admin.organization.add-reservation-type" "fi" "Lisää ajanvaraustyyppi"
+"auth-admin.organization.add-reservation-type" "sv" ""
+"auth-admin.organization.reservation-type.name" "fi" "Ajanvaraustyypin nimi"
+"auth-admin.organization.reservation-type.name" "sv" ""
+"auth-admin.organization.reservation-types" "fi" "Organisaation ajanvaraustyypit"
+"auth-admin.organization.reservation-types" "sv" ""
+"auth-admin.organization.reservation-type" "fi" "Ajanvaraustyyppi"
+"auth-admin.organization.reservation-type" "sv" ""
