Add functionality for manual conversion of PDF attachments to PDF/A
This is available on the archiving page and enables the archiving of
some older applications where some PDFs have not been originally
automatically converted on upload.

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -4058,3 +4058,5 @@
 "tos.function.fix.select" "sv" "Ny uppgiftsklass"
 "korjaa" "fi" "Korjaa"
 "korjaa" "sv" "Repareras"
+"Konvertoi PDF/A-muotoon" "fi" "Konvertoi PDF/A-muotoon"
+"Konvertoi PDF/A-muotoon" "sv" ""
