--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -1628,8 +1628,12 @@
 "hankkeen-kuvaus.poikkeamat" "sv" "Avvikelse från bestämmelserna med motiveringar"
 "hearing" "fi" "Maanomistajien kuuleminen"
 "hearing" "sv" "Hörande av markägare"
-"help.AddForeman" "fi" "Työnjohtaja ilmoitetaan aina erillisellä ilmoituksella.<br/>Paina alla olevaan painiketta, jos haluat ilmoittaa työnjohtajan jo lupahakemuksen yhteydessä."
-"help.AddForeman" "sv" "Arbetsledaren meddelas alltid med en separat anmälan.<br/>Tryck knappen nedan, om du vill meddela arbetsledare redan i samband med tillståndsansökan."
+"help.AddForeman" "fi" "Työnjohtaja ilmoitetaan aina erillisellä ilmoituksella."
+"help.AddForeman.buttonInfo" "fi" "Paina alla olevaan painiketta, jos haluat ilmoittaa työnjohtajan jo lupahakemuksen yhteydessä."
+"help.AddForeman.authorityInfo" "fi" "Jos sinulla on tarve nimetä työnjohtaja ennen päätöstä, ota yhteyttä viranomaiseen."
+"help.AddForeman" "sv" "Arbetsledaren meddelas alltid med en separat anmälan."
+"help.AddForeman.buttonInfo" "sv" "Tryck knappen nedan, om du vill meddela arbetsledare redan i samband med tillståndsansökan."
+"help.AddForeman.disabledInfo" "fi" "Otappa kuule yhteyttä nimismieheen."
 "help.AddPermit" "fi" "Valitsemasi toimenpiteen täytyy liittyä aikaisempaan lupaan. Lisää aikaisempi lupa viiteluvaksi alla olevalla napilla."
 "help.AddPermit" "sv" "Den valda åtgärden måste höra till ett tidigare tillstånd. Lägg till det tidigare tillståndet som refernstillstånd med knappen nedan."
 "help.application.summary" "fi" "Tältä välilehdeltä näet luvan perusteena olleen hakemuksen lomaketiedot. Jos tietoihin tulee rakentamisen aikana muutoksia, ota yhteyttä viranomaiseen keskusteluketjun kautta."
