--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -4072,3 +4072,9 @@
 "authorityAdmin.archive.heading" "sv" "Elektroniskt arkiv"
 "authorityAdmin.archive.startDate" "fi" "Sähköisen arkistoinnin aloituspäivämäärä"
 "authorityAdmin.archive.startDate" "sv" ""
+"archivalSummary.markArchived.heading" "fi" "Merkitse arkistoiduksi"
+"archivalSummary.markArchived.heading" "sv" ""
+"archivalSummary.markArchived.guide" "fi" "Hakemusvaiheen merkitseminen arkistoiduksi poistaa hankkeen arkistoinnin työjonosta."
+"archivalSummary.markArchived.guide" "sv" ""
+"archivalSummary.markArchived.button" "fi" "Merkitse hakemusvaihe arkistoiduksi"
+"archivalSummary.markArchived.button" "sv" ""
