--- a/resources/i18n/errors.txt
+++ b/resources/i18n/errors.txt
@@ -461,3 +461,4 @@
 "error.vrk:CR343" "fi" "Jos lämmitystapa on sähkölämmitys, on polttoaineen oltava sähkö"
 "error.vrk:CR343" "sv" "Om uppvärmningssättet är elvärme, måste bränslet vara el."
 "error.foreman-already-linked" "fi" "Työnjohtaja on jo nimetty eri rooliin."
+"error.ram-link-already-exists" "fi" "Liittestä on jo tehty rakentamisen aikainen muutos"
