contract and verdict final

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -4090,3 +4090,5 @@
 "verdict.yhteyshenkilo" "sv" ""
 "verdict.contract.date" "fi" "Sopimuksen päivämäärä"
 "verdict.contract.date" "sv" ""
+"verdict.export.operations" "fi" "Asia"
+"verdict.export.operations" "sv" ""
