--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -3645,7 +3645,7 @@
 "uusiRakennus.mitat.kerrosala.help" "fi" "Kerrosalaan luetaan kerrosten alat ulkoseinien ulkopinnan mukaan laskettuina ja se kellarikerroksen tai ullakon ala, johon sijoitetaan tai voidaan näiden tilojen sijainnista, yhteyksistä, koosta, valoisuudesta ja muista ominaisuuksista päätellen sijoittaa rakennuksen pääasiallisen käyttötarkoituksen mukaisia tiloja (maankäyttö- ja rakennuslaki 115 § 3 mom.)."
 "uusiRakennus.mitat.kerrosala.help" "sv" "Till våningsytan räknas våningarnas ytor beräknade enligt ytterväggarnas utsidor och sådan yta i källar- eller vindsvåning där lokaler avsedda för byggnadens huvudsakliga ändamål placeras eller med tanke på dessa lokalers läge, förbindelser, storlek, ljus och andra egenskaper kunde placeras (115 § 3 mom. markanvändnings- och bygglagen). Närmare anvisningar om hur våningsytan beräknas finns i Finlands standardiseringsförbunds standard (SFS 5139)."
 "uusiRakennus.mitat.rakennusoikeudellinenKerrosala.help!" "fi" "Rakennusoikeudellisella kerrosalalla tarkoitetaan seinävahvuudella 250 mm laskettua rakennuksen kerrosalaa."
-"uusiRakennus.mitat.rakennusoikeudellinenKerrosala.help!" "sv" "Rakennusoikeudellisella kerrosalalla tarkoitetaan seinävahvuudella 250 mm laskettua rakennuksen kerrosalaa."
+"uusiRakennus.mitat.rakennusoikeudellinenKerrosala.help!" "sv" "Med byggnadsrättslig våningsyta avses byggnadens våningsyta som är räknad med en väggtjocklek på 250 mm."
 "uusiRakennus.mitat.kerrosluku.help" "fi" "Kerroslukuun lasketaan kaikki ne kokonaan tai pääasiallisesti maanpinnan yläpuolella olevat kerrokset, joissa on asuin- tai työ-huoneita tai rakennuksen pääasiallisen käyttötarkoituksen mukaisia tiloja. Kerrosluku ilmoitetaan kokonaislukuna. Jos kerrosten lukumäärä vaihtelee rakennuksen eri osissa, ilmoitetaan se kerrosten lukumäärä,  joka on suurimmassa osassa rakennusta."
 "uusiRakennus.mitat.kerrosluku.help" "sv" "I våningsantalet medräknas alla de huvudsakligen ovan jord belägna våningarna i vilka det finns bostads- eller arbetsrum eller mot byggnadens huvudsakliga användningssyfte svarande utrymmen. Våningsantalet anges som helt tal. Om antalet våningar varierar i olika delar av byggnaden, anges det våningsantal som finns i största delen av byggnaden."
 "uusiRakennus.mitat.kokonaisala.help" "fi" "Kokonaisalaan lasketaan kaikkien kerrosten, kellareiden ja lämpöeristettyjen ullakoiden pinta-ala yhteensä ulkomitoin. Mukaan ei lasketa parvekkeita, katoksia eikä 160 cm matalampia tiloja."
@@ -4065,7 +4065,7 @@
 "korjaa" "fi" "Korjaa"
 "korjaa" "sv" "Repareras"
 "Konvertoi PDF/A-muotoon" "fi" "Konvertoi PDF/A-muotoon"
-"Konvertoi PDF/A-muotoon" "sv" ""
+"Konvertoi PDF/A-muotoon" "sv" "Konvertera till PDF/A-form"
 "applications.filter.readyForArchival" "fi" "Arkistoitavat"
 "applications.filter.readyForArchival" "sv" ""
 "authorityAdmin.archive.heading" "fi" "Sähköinen arkisto"
