--- a/resources/i18n/schemas.txt
+++ b/resources/i18n/schemas.txt
@@ -2015,7 +2015,7 @@
 "purku.mitat.rakennusoikeudellinenKerrosala" "fi" "Rakennusoikeudellinen kerrosala"
 "purku.mitat.rakennusoikeudellinenKerrosala" "sv" "Våningsyta med byggnadsrätt"
 "purku.mitat.rakennusoikeudellinenKerrosala.help!" "fi" "Rakennusoikeudellisella kerrosalalla tarkoitetaan seinävahvuudella 250 mm laskettua rakennuksen kerrosalaa."
-"purku.mitat.rakennusoikeudellinenKerrosala.help!" "sv" "Rakennusoikeudellisella kerrosalalla tarkoitetaan seinävahvuudella 250 mm laskettua rakennuksen kerrosalaa."
+"purku.mitat.rakennusoikeudellinenKerrosala.help!" "sv" "Med byggnadsrättslig våningsyta avses byggnadens våningsyta som är räknad med en väggtjocklek på 250 mm."
 "purku.mitat.tilavuus" "fi" "Rakennuksen tilavuus"
 "purku.mitat.tilavuus" "sv" "Byggnadens volym"
 "purku.mitat.tilavuus.help" "fi" "Rakennuksen tilavuus on tila, jota rajoittavat ulkoseinien ulkopinnat, alapohjan (rakennuksen alimman tilan pohja lämmöneristyksineen) alapinta ja yläpohjan (rakennuksen ylintä lämmintä tilaa  yläpuolelta rajoittava rakennusosa, johon kuuluu lämmöneristys suojauksineen) yläpinta."
@@ -2843,7 +2843,7 @@
 "rakennuksen-laajentaminen.mitat.rakennusoikeudellinenKerrosala" "fi" "Rakennusoikeudellinen kerrosala"
 "rakennuksen-laajentaminen.mitat.rakennusoikeudellinenKerrosala" "sv" "Våningsyta med byggnadsrätt"
 "rakennuksen-laajentaminen.mitat.rakennusoikeudellinenKerrosala.help!" "fi" "Rakennusoikeudellisella kerrosalalla tarkoitetaan seinävahvuudella 250 mm laskettua rakennuksen kerrosalaa."
-"rakennuksen-laajentaminen.mitat.rakennusoikeudellinenKerrosala.help!" "sv" "Rakennusoikeudellisella kerrosalalla tarkoitetaan seinävahvuudella 250 mm laskettua rakennuksen kerrosalaa."
+"rakennuksen-laajentaminen.mitat.rakennusoikeudellinenKerrosala.help!" "sv" "Med byggnadsrättslig våningsyta avses byggnadens våningsyta som är räknad med en väggtjocklek på 250 mm."
 "rakennuksen-laajentaminen.mitat.tilavuus" "fi" "Rakennuksen tilavuus"
 "rakennuksen-laajentaminen.mitat.tilavuus" "sv" "Byggnadens volym"
 "rakennuksen-laajentaminen.mitat.tilavuus.help" "fi" "Rakennuksen tilavuus on tila, jota rajoittavat ulkoseinien ulkopinnat, alapohjan (rakennuksen alimman tilan pohja lämmöneristyksineen) alapinta ja yläpohjan (rakennuksen ylintä lämmintä tilaa  yläpuolelta rajoittava rakennusosa, johon kuuluu lämmöneristys suojauksineen) yläpinta."
@@ -3479,7 +3479,7 @@
 "rakennuksen-muuttaminen.mitat.rakennusoikeudellinenKerrosala" "fi" "Rakennusoikeudellinen kerrosala"
 "rakennuksen-muuttaminen.mitat.rakennusoikeudellinenKerrosala" "sv" "Våningsyta med byggnadsrätt"
 "rakennuksen-muuttaminen.mitat.rakennusoikeudellinenKerrosala.help!" "fi" "Rakennusoikeudellisella kerrosalalla tarkoitetaan seinävahvuudella 250 mm laskettua rakennuksen kerrosalaa."
-"rakennuksen-muuttaminen.mitat.rakennusoikeudellinenKerrosala.help!" "sv" "Rakennusoikeudellisella kerrosalalla tarkoitetaan seinävahvuudella 250 mm laskettua rakennuksen kerrosalaa."
+"rakennuksen-muuttaminen.mitat.rakennusoikeudellinenKerrosala.help!" "sv" "Med byggnadsrättslig våningsyta avses byggnadens våningsyta som är räknad med en väggtjocklek på 250 mm."
 "rakennuksen-muuttaminen.mitat.tilavuus" "fi" "Rakennuksen tilavuus"
 "rakennuksen-muuttaminen.mitat.tilavuus" "sv" "Byggnadens volym"
 "rakennuksen-muuttaminen.mitat.tilavuus.help" "fi" "Rakennuksen tilavuus on tila, jota rajoittavat ulkoseinien ulkopinnat, alapohjan (rakennuksen alimman tilan pohja lämmöneristyksineen) alapinta ja yläpohjan (rakennuksen ylintä lämmintä tilaa  yläpuolelta rajoittava rakennusosa, johon kuuluu lämmöneristys suojauksineen) yläpinta."
