--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -748,7 +748,6 @@
 "attachment.legend.ok" "sv" "Bilaga som myndigheten preliminärt godkänt. Egentligt godkännande ges senare i den formella behandlingen av tillståndet."
 "attachment.missing-fonts" "fi" "Seuraavat kirjasintyypit täytyy sisällyttää asiakirjaan arkistointia varten"
 "attachment.missing-fonts" "sv" "För arkivering måste följande fonter ingå i dokumentet"
-"attachment.new-ram" "fi" "Uusi RAM-liite"
 "attachment.noName" "fi" "Nimetön"
 "attachment.noName" "sv" "Namnlös"
 "attachment.noPreview" "fi" "Ei esikatselua"
@@ -757,6 +756,8 @@
 "attachment.pdf" "sv" "Öppna pdf-filen för förhandsgranskning."
 "attachment.pdf.preview.link" "fi" "Näytä tiedoston esikatseluversio"
 "attachment.pdf.preview.link" "sv" "Förhandsgranska filen"
+"attachment.ram.new" "fi" "Uusi RAM-liite"
+"attachment.ram.links" "fi" "RAM-liitteet"
 "attachment.reject" "fi" "Tarkennettavaa"
 "attachment.reject" "sv" "Bör preciseras"
 "attachment.removed" "fi" "Poistettu liite"
