Revert "text change to translations: OVT->verkkolaskutusosoite, samma pa svenska"
This reverts commit 27f93e3e77720ce9c8a54b40f70aee5824f1837b.

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -2894,8 +2894,8 @@
 "register.company.form.billing.address2" "sv" "Adress 2"
 "register.company.form.billing.country" "fi" "Maa"
 "register.company.form.billing.country" "sv" "Land"
-"register.company.form.billing.ovt" "fi" "Verkkolaskutusosoite"
-"register.company.form.billing.ovt" "sv" "Nätfakturaadress"
+"register.company.form.billing.ovt" "fi" "OVT-tunnus"
+"register.company.form.billing.ovt" "sv" "EDI-kod"
 "register.company.form.billing.po" "fi" "Postitoimipaikka"
 "register.company.form.billing.po" "sv" "Postanstalt"
 "register.company.form.billing.pop" "fi" "Maksuoperaattori"
