--- a/resources/i18n/errors.txt
+++ b/resources/i18n/errors.txt
@@ -116,8 +116,8 @@
 "error.illegal-number:too-big" "sv" "Siffran är för stor"
 "error.illegal-number:too-small" "fi" "Liian pieni numero"
 "error.illegal-number:too-small" "sv" "Siffran är för liten"
-"error.illegal-ovt-tunnus" "fi" "Virheellinen Verkkolaskutusosoite"
-"error.illegal-ovt-tunnus" "sv" "Felaktig nätfakturaadress"
+"error.illegal-ovt-tunnus" "fi" "Virheellinen OVT-tunnus"
+"error.illegal-ovt-tunnus" "sv" "Felaktig EDI-kod"
 "error.illegal-rakennusnumero" "fi" "Virheellinen rakennusnumero"
 "error.illegal-rakennusnumero" "sv" "Felaktig byggnadsnummer"
 "error.illegal-rakennustunnus" "fi" "Virheellinen rakennustunnus"
@@ -192,8 +192,8 @@
 "error.invalid-municipality" "sv" "Felaktig kommunnummer"
 "error.invalid-nakyvyys-value" "fi" "Tuntematon liitteen näkyvyys-arvo"
 "error.invalid-nakyvyys-value" "sv" "Bilagans synlighetsvärde okänt"
-"error.invalidOVT" "fi" "Virheellinen verkkolaskutus"
-"error.invalidOVT" "sv" "Felaktigt nätfakturaadress"
+"error.invalidOVT" "fi" "Virheellinen OVT-tunnus"
+"error.invalidOVT" "sv" "EDI-kod"
 "error.invalid-property-id" "fi" "Tarkasta kiinteistötunnus"
 "error.invalid-property-id" "sv" "Kontrollera fastighetsbeteckning"
 "error.invalid-response" "fi" "Virheellinen vastaus"
