--- a/resources/i18n/schemas.txt
+++ b/resources/i18n/schemas.txt
@@ -1512,8 +1512,8 @@
 "osapuoli.yritys.osoite.postitoimipaikannimi" "sv" "Postanstalt"
 "osapuoli.yritys.verkkolaskutustieto._group_label" "fi" "Verkkolaskutustiedot"
 "osapuoli.yritys.verkkolaskutustieto._group_label" "sv" "Nätfaktureringsuppgifter"
-"osapuoli.yritys.verkkolaskutustieto.ovtTunnus" "fi" "Verkkolaskutusosoite"
-"osapuoli.yritys.verkkolaskutustieto.ovtTunnus" "sv" "Nätfakturaadress"
+"osapuoli.yritys.verkkolaskutustieto.ovtTunnus" "fi" "OVT-tunnus"
+"osapuoli.yritys.verkkolaskutustieto.ovtTunnus" "sv" "EDI-kod"
 "osapuoli.yritys.verkkolaskutustieto.ovtTunnus.help" "fi" "Laskutettavan yrityksen verkkolaskuosoite, 12-17 merkkiä (0037 + Y-tunnus ilman viivaa + mahdollinen tarkenne)"
 "osapuoli.yritys.verkkolaskutustieto.ovtTunnus.help" "sv" "Nätfakturaadress för företaget som faktureras, 12-17 tecken (0037 + FO-nummer utan streck + eventuell specificering)"
 "osapuoli.yritys.verkkolaskutustieto.valittajaTunnus" "fi" "Välittäjätunnus"
